fixes CSS style overlap for admin pages; fixes the back link on error pages

--- a/app/assets/stylesheets/osem-errors.css.scss
+++ b/app/assets/stylesheets/osem-errors.css.scss
@@ -1,4 +1,4 @@
-body {
+.errbody {
 	background-color: #263238;
 }
 
